--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@
 *.app
 
 CRAN2/out/*
+CRAN2/.cproject
+CRAN2/src/Makefile
 CRAN2/simulations/.qtenvrc
 CRAN2/simulations/.cmdenv-log
 CRAN2/simulations/*.anf
@@ -40,6 +42,8 @@ CRAN2/simulations/results/*
 CRAN2/.settings/
 CRAN2/src/CRan
 CRAN2/.computed/
+CRAN2/src/PktMessage_m.cc
+CRAN2/src/PktMessage_m.h
 CRAN2/.cmdenv-log
 .cmdenv-log
 /.metadata/
