--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,3 +2,11 @@
 network = CRAN2
 CRAN2.cellularSystem.dr = 10bps
 CRAN2.N_cells = 5
+CRAN2.as.SizeMean= 0
+CRAN2.as.Size_Distribution=1
+
+
+# RNGs
+num-rngs = 1
+seed-set = ${repetition}
+*.rng-0 = 0
