--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -5,6 +5,7 @@ CRAN2.N_cells = 5
 CRAN2.as.SizeMean= 0
 CRAN2.as.Size_Distribution=1
 
+CRAN2.cellularSystem.rrh[*].compression_used = false
 
 # RNGs
 num-rngs = 1
