--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -6,7 +6,7 @@ CRAN2.as.SizeMean= 0
 CRAN2.as.Size_Distribution=1
 
 CRAN2.cellularSystem.rrh[*].compression_used = false
-
+CRAN2.cellularSystem.compression_ratio = 0
 # RNGs
 num-rngs = 1
 seed-set = ${repetition}
