--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -1,13 +1,19 @@
 [General]
 network = CRAN2
 CRAN2.cellularSystem.dr = 100bps
+
+# AS Parameters Inizialization values
 CRAN2.N_cells = 5
-CRAN2.as.SizeMean= 0
-CRAN2.as.Size_Distribution=1
+CRAN2.as.sizeMean= 0
+CRAN2.as.sizeDistribution= 1
+CRAN2.as.timeMean= 0
+CRAN2.as.timeDistribution = 1
 
 CRAN2.cellularSystem.rrh[*].compression_used = false
 CRAN2.cellularSystem.compression_ratio = 0
+
 # RNGs
-num-rngs = 1
+num-rngs = 2
 seed-set = ${repetition}
-*.rng-0 = 0
+*.CRAN2.rng-0 = 0
+*.CRAN2.rng-1 = 1
