--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -15,5 +15,5 @@ CRAN2.cellularSystem.compression_ratio = 0
 # RNGs
 num-rngs = 2
 seed-set = ${repetition}
-*.CRAN2.rng-0 = 0
-*.CRAN2.rng-1 = 1
+*.CRAN2.as.rng-0 = 0
+*.CRAN2.as.rng-1 = 1
