--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,12 +2,15 @@
 network = CRAN2
 CRAN2.cellularSystem.dr = 100bps
 CRAN2.N_cells = 5
-CRAN2.as.SizeMean= 0
-CRAN2.as.Size_Distribution=1
+CRAN2.as.sizeMean = 0
+CRAN2.as.sizeDistribution = 1
 
-CRAN2.cellularSystem.rrh[*].compression_used = false
-CRAN2.cellularSystem.compression_ratio = 0
 # RNGs
 num-rngs = 1
 seed-set = ${repetition}
 *.rng-0 = 0
+
+
+[Config Compression]
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression = 0
