--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -22,3 +22,4 @@ seed-set = ${repetition}
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression = 0
 
+[Config Test_2] extends Compression
