added finish methods in rrh and cell, added an other rng, minor fix

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -3,7 +3,7 @@ network = CRAN2
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
 sim-time-limit = 200000s
-repeat = 5
+repeat = 6
 
 CRAN2.as.sizeMean = 1024
 CRAN2.as.sizeDistribution = 1
@@ -12,10 +12,11 @@ CRAN2.as.timeMean = 3
 CRAN2.as.timeDistribution = 1
 
 # RNGs
-num-rngs = 2
+num-rngs = 3
 seed-set = ${repetition}
 *.CRAN2.as.rng-0 = 0
 *.CRAN2.as.rng-1 = 1
+*.CRAN2.as.rng-2 = 2
 
 [Config Compression_dr_1]
 CRAN2.cellularSystem.compression_on = true
