changed&tested configuration, added signal+statistic in rrh

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,14 +2,14 @@
 network = CRAN2
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
-sim-time-limit = 200000s
+sim-time-limit = 20000s
 repeat = 6
 
 CRAN2.as.sizeMean = 1024
-CRAN2.as.sizeDistribution = 1
+#CRAN2.as.sizeDistribution = 1
 
-CRAN2.as.timeMean = 3
-CRAN2.as.timeDistribution = 1
+CRAN2.as.timeMean = 0.5
+#CRAN2.as.timeDistribution = 1
 
 # RNGs
 num-rngs = 3
@@ -41,6 +41,9 @@ CRAN2.cellularSystem.dr = 20kbps
 [Config Test_1-2] 
 	extends = Compression_dr_1
 CRAN2.cellularSystem.dr = 40kbps
+# lognormal
+CRAN2.as.sizeMean = 7
+CRAN2.as.sizeDistribution = 0
 
 [Config Test_1-3] 
 	extends = Compression_dr_1
