added test configuration for warm-up period

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -1,9 +1,10 @@
 [General]
 network = CRAN2
+sim-time-limit = 60000s
+repeat = 6
+
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
-sim-time-limit = 20000s
-repeat = 6
 
 CRAN2.as.sizeMean = 1024
 #CRAN2.as.sizeDistribution = 1
@@ -17,6 +18,25 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-0 = 0
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
+
+[Config warm-up]
+repeat = 3
+CRAN2.N_cells = ${3, 10}
+CRAN2.cellularSystem.dr = ${15, 25}kbps
+
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
+
+#[Config compression_warm-up]
+#extends = warm-up
+#CRAN2.cellularSystem.compression_on = default
+#CRAN2.cellularSystem.compression_rate = 1
+
+[Config warm-up-lognorm]
+extends = warm-up
+CRAN2.as.sizeMean = 7
+CRAN2.as.sizeVariance = 0.3
+CRAN2.as.sizeDistribution = 0
 
 [Config Compression_dr_1]
 CRAN2.cellularSystem.compression_on = true
@@ -68,6 +88,7 @@ CRAN2.cellularSystem.dr = 20kbps
 [Config Test_3-2] 
 	extends = Compression_dr_3
 CRAN2.cellularSystem.dr = 40kbps
+sim-time-limit = 200000s
 
 [Config Test_3-3] 
 	extends = Compression_dr_3
