modified statistic names

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -22,7 +22,7 @@ seed-set = ${repetition}
 [Config warm-up]
 repeat = 3
 CRAN2.N_cells = ${3, 10}
-CRAN2.cellularSystem.dr = ${15, 25}kbps
+CRAN2.cellularSystem.dr = ${15, 20, 25}kbps
 
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
