--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,6 +2,8 @@
 network = CRAN2
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
+repeat = 5
+sim-time-limit = 50000s
 
 CRAN2.as.sizeMean = 1024
 CRAN2.as.sizeDistribution = 1
