--- a/CRAN2/.qtenvrc
+++ b/CRAN2/.qtenvrc
@@ -1,10 +1,14 @@
+[General]
+last-configname=General
+last-runnumber=4
+
 [RunModeProfiles]
 run-playback-speed=1
 run-min-playback-speed=0.01
 run-max-playback-speed=100
 run-min-animation-speed=nan
 run-max-animation-speed=nan
-fast-playback-speed=1000
+fast-playback-speed=676.0829753919819
 fast-min-playback-speed=1
 fast-max-playback-speed=1e+06
 fast-min-animation-speed=nan
