--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = CRAN2
-sim-time-limit = 60000s
+sim-time-limit = 120000s
 repeat = 6
 
 # AS Parameters Inizialization values
@@ -18,6 +18,14 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-0 = 0
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
+
+[Config no-compr-warm-up]
+repeat = 3
+CRAN2.N_cells = ${5}
+CRAN2.cellularSystem.dr = ${20}kbps
+
+CRAN2.cellularSystem.compression_on = false
+
 
 [Config warm-up]
 repeat = 3
