--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -19,6 +19,42 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
 
+####  ## Debug Configurations ## ####
+
+## Without compression one cell ##
+[Config no-compr-debug-oneCell]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${16.6}kbps
+CRAN2.cellularSystem.compression_on = false
+CRAN2.N_cells=1
+
+## Without compression multi-cell ##
+[Config no-compr-debug-Multicell]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${16.6}kbps
+CRAN2.cellularSystem.compression_on = false
+CRAN2.N_cells=30
+
+## Compression equal to 0% ##
+[Config compr-0-debug-oneCell]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 16.6kbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 0
+CRAN2.N_cells = 1
+
+## Exponential with compression equal to 99% ##
+[Config compr-99-debug-oneCell]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 16.6kbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+CRAN2.N_cells = 1
+
 [Config no-compr-warm-up]
 repeat = 3
 CRAN2.N_cells = ${5}
@@ -29,11 +65,11 @@ CRAN2.cellularSystem.compression_on = false
 
 [Config warm-up]
 repeat = 3
-CRAN2.N_cells = ${3, 10}
-CRAN2.cellularSystem.dr = ${15, 20, 25}kbps
+CRAN2.N_cells = ${3, 5, 10}
+CRAN2.cellularSystem.dr = ${18, 20}kbps
 
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
+#CRAN2.cellularSystem.compression_on = true
+#CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
 
 #[Config compression_warm-up]
 #extends = warm-up
