--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -19,6 +19,28 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
 
+[Config debug-test]
+CRAN2.cellularSystem.dr = ${16..23 step 0.3}kbps
+CRAN2.as.timeMean = ${0.8, 1, 1.3}
+sim-time-limit = 86400s # 24h
+
+[Config debug-test2]
+extends = debug-test
+sim-time-limit = 120000s
+
+[Config warm-up-test]
+repeat = 3
+CRAN2.N_cells = 3
+CRAN2.cellularSystem.dr = ${16..17 step 0.2}kbps
+
+[Config constant-test]
+#sim-time-limit = 180000s
+repeat = 5
+CRAN2.N_cells = ${3, 10}
+CRAN2.cellularSystem.dr = ${15..18 step 1}kbps
+CRAN2.as.sizeDistribution = 2
+#CRAN2.as.timeDistribution = 2
+
 [Config warm-up]
 repeat = 3
 CRAN2.N_cells = ${3, 10}
@@ -27,8 +49,8 @@ CRAN2.cellularSystem.dr = ${15, 20, 25}kbps
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
 
-#[Config compression_warm-up]
-#extends = warm-up
+[Config compression_warm-up]
+extends = warm-up
 #CRAN2.cellularSystem.compression_on = default
 #CRAN2.cellularSystem.compression_rate = 1
 
@@ -38,70 +60,43 @@ CRAN2.as.sizeMean = 7
 CRAN2.as.sizeVariance = 0.3
 CRAN2.as.sizeDistribution = 0
 
-[Config Compression_dr_1]
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 20
+[Config no-compression]
+repeat = 5
+CRAN2.N_cells = ${3, 5, 10, 20, 50}
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${16.5..30 step 0.5}kbps	# 16.4 min speed 
 
-[Config Compression_dr_2]
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 40
+[Config no-compression2]
+repeat = 5
+CRAN2.N_cells = ${3, 5, 10, 20, 50}
+CRAN2.as.timeMean = 0.8
+CRAN2.cellularSystem.dr = ${15..30 step 0.5}kbps	# 
 
-[Config Compression_dr_3]
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 60
-
-[Config Compression_dr_4]
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 80
-
-[Config Test_1-1] 
-	extends = Compression_dr_1
-CRAN2.cellularSystem.dr = 20kbps
-
-[Config Test_1-2] 
-	extends = Compression_dr_1
-CRAN2.cellularSystem.dr = 40kbps
-# lognormal
-CRAN2.as.sizeMean = 7
+[Config no-compression-lognorm]
+extends = no-compression
 CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7
+CRAN2.as.sizeVariance = 0.3
 
-[Config Test_1-3] 
-	extends = Compression_dr_1
-CRAN2.cellularSystem.dr = 60kbps
+[Config compression]
+extends = no-compression
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${10..90 step 10}
 
-[Config Test_2-1] 
-	extends = Compression_dr_2
-CRAN2.cellularSystem.dr = 20kbps
+[Config compression2]
+extends = no-compression2
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${10..30 step 5}
 
-[Config Test_2-2] 
-	extends = Compression_dr_2
-CRAN2.cellularSystem.dr = 40kbps
+[Config compression-lognorm]
+extends = no-compression-lognorm
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${10..30 step 5}
 
-[Config Test_2-3] 
-	extends = Compression_dr_2
-CRAN2.cellularSystem.dr = 60kbps
 
-[Config Test_3-1] 
-	extends = Compression_dr_3
-CRAN2.cellularSystem.dr = 20kbps
 
-[Config Test_3-2] 
-	extends = Compression_dr_3
-CRAN2.cellularSystem.dr = 40kbps
-sim-time-limit = 200000s
 
-[Config Test_3-3] 
-	extends = Compression_dr_3
-CRAN2.cellularSystem.dr = 60kbps
 
-[Config Test_4-1] 
-	extends = Compression_dr_4
-CRAN2.cellularSystem.dr = 20kbps
 
-[Config Test_4-2] 
-	extends = Compression_dr_4
-CRAN2.cellularSystem.dr = 40kbps
 
-[Config Test_4-3] 
-	extends = Compression_dr_4
-CRAN2.cellularSystem.dr = 60kbps
+
