--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -93,7 +93,11 @@ extends = no-compression-lognorm
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${10..30 step 5}
 
-
+[Config lognorm-test]
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = 7
+CRAN2.as.sizeVariance = 0.1
+CRAN2.cellularSystem.dr = ${20}kbps
 
 
 
