added test configurations

--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -116,7 +116,10 @@ CRAN2.as.timeMean = 0.8
 CRAN2.cellularSystem.dr = ${15..30 step 0.5}kbps	# 
 
 [Config no-compression-lognorm]
-extends = no-compression
+#extends = no-compression
+repeat = 20
+CRAN2.N_cells = ${10}
+CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeMean = 7
 CRAN2.as.sizeVariance = 0.3
