--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -77,6 +77,18 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.N_cells = 1
 
+#### #Validation configs# ####
+
+# Case B #
+[Config case-b-validation-30]
+repeat = 20
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 30
+
 [Config no-compr-warm-up]
 repeat = 3
 CRAN2.N_cells = ${5}
