--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -19,28 +19,6 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
 
-[Config debug-test]
-CRAN2.cellularSystem.dr = ${16..23 step 0.3}kbps
-CRAN2.as.timeMean = ${0.8, 1, 1.3}
-sim-time-limit = 86400s # 24h
-
-[Config debug-test2]
-extends = debug-test
-sim-time-limit = 120000s
-
-[Config warm-up-test]
-repeat = 3
-CRAN2.N_cells = 3
-CRAN2.cellularSystem.dr = ${16..17 step 0.2}kbps
-
-[Config constant-test]
-#sim-time-limit = 180000s
-repeat = 5
-CRAN2.N_cells = ${3, 10}
-CRAN2.cellularSystem.dr = ${15..18 step 1}kbps
-CRAN2.as.sizeDistribution = 2
-#CRAN2.as.timeDistribution = 2
-
 ####  ## Debug Configurations ## ####
 
 ## Without compression one cell ##
@@ -79,6 +57,14 @@ CRAN2.N_cells = 1
 
 #### #Validation configs# ####
 
+# Case A #
+[Config case-a-validation]
+repeat = 20
+*.N_cells = 20
+*.cellularSystem.dr = ${20}kbps
+*.as.sizeMean = 1024
+*.as.timeMean = 0.5
+
 # Case B #
 [Config case-b-validation-30]
 repeat = 20
@@ -89,72 +75,63 @@ CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 30
 
-[Config no-compr-warm-up]
-repeat = 3
-CRAN2.N_cells = ${5}
-CRAN2.cellularSystem.dr = ${20}kbps
-
-CRAN2.cellularSystem.compression_on = false
-
-[Config warm-up]
-repeat = 3
-CRAN2.N_cells = ${3, 5, 10}
-CRAN2.cellularSystem.dr = ${18, 20}kbps
-
-#CRAN2.cellularSystem.compression_on = true
-#CRAN2.cellularSystem.compression_rate = ${0, 15, 20, 30}
-
-[Config compression_warm-up]
-extends = warm-up
-#CRAN2.cellularSystem.compression_on = default
-#CRAN2.cellularSystem.compression_rate = 1
-
-[Config warm-up-lognorm]
-extends = warm-up
-CRAN2.as.sizeMean = 7
-CRAN2.as.sizeVariance = 0.3
-CRAN2.as.sizeDistribution = 0
-
-[Config no-compression]
-repeat = 5
-CRAN2.N_cells = ${3, 5, 10, 20, 50}
+# Degeneracy Test #
+[Config degeneracy]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${16.6}kbps
+CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.dr = ${16.5..30 step 0.5}kbps	# 16.4 min speed 
 
-[Config no-compression2]
-repeat = 5
-CRAN2.N_cells = ${3, 5, 10, 20, 50}
-CRAN2.as.timeMean = 0.8
-CRAN2.cellularSystem.dr = ${15..30 step 0.5}kbps	# 
-
-[Config no-compression-lognorm]
-#extends = no-compression
-repeat = 20
-CRAN2.N_cells = ${10}
+# Consistency Test #
+[Config consistency_log]
+repeat = 10
+CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
-CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config compression]
-extends = no-compression
+[Config consistency_b_log]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${10..90 step 10}
+#CRAN2.cellularSystem.compression_rate = 0
 
-[Config compression2]
-extends = no-compression2
+[Config continuity_log]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 6.9
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+
+[Config continuity_b_log]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 6.9
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${10..30 step 5}
+#CRAN2.cellularSystem.compression_rate = 0
 
-[Config compression-lognorm]
-extends = no-compression-lognorm
+[Config monotonicity_test_log]
+repeat = 20 
+CRAN2.N_cells = ${2 , 10 , 35 , 50}
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 6.9
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${10..30 step 5}
-
-
-
-
-
-
-
+CRAN2.cellularSystem.compression_rate = 20
 
