--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -75,13 +75,31 @@ CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 30
 
-# Degeneracy Test #
-[Config degeneracy]
+# Degeneracy Test #1 No RRH connected #
+[Config degeneracy_1]
 repeat = 10
-CRAN2.N_cells = 10
+CRAN2.N_cells = 0
 CRAN2.cellularSystem.dr = ${16.6}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
+
+# Degeneracy Test #2 Infinite datarate #
+#  Zero is treated specially and results in zero transmission duration, i.e. it stands for infinite bandwidth #
+[Config degeneracy_2]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${0}kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+
+# Degeneracy Test #2 Low datarate #
+[Config degeneracy_3]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${0.1}kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+
 
 # Consistency Test #
 [Config consistency_log]
