--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -79,7 +79,7 @@ CRAN2.cellularSystem.compression_rate = 30
 [Config degeneracy_1]
 repeat = 10
 CRAN2.N_cells = 0
-CRAN2.cellularSystem.dr = ${16.6}kbps
+CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
@@ -123,7 +123,7 @@ CRAN2.cellularSystem.compression_on = true
 #CRAN2.cellularSystem.compression_rate = 0
 
 [Config continuity_log]
-repeat = 40
+repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 6.9
@@ -131,8 +131,17 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
+[Config continuity_log_7]
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+
 [Config continuity_b_log]
-repeat = 40
+repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 6.9
@@ -140,10 +149,22 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
-#CRAN2.cellularSystem.compression_rate = 0
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config continuity_b_log_7]
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
 
 [Config monotonicity_test_log]
-repeat = 20 
+repeat = 25
 CRAN2.N_cells = ${2 , 10 , 35 , 50}
 CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 6.9
