--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -103,7 +103,7 @@ CRAN2.as.timeMean = 0.5
 
 # Consistency Test #
 [Config consistency_log]
-repeat = 10
+repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 7
@@ -111,8 +111,8 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config consistency_b_log]
-repeat = 10
+[Config consistency_log_double]
+repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 7
@@ -121,6 +121,30 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 #CRAN2.cellularSystem.compression_rate = 0
+
+# Consistency Test #
+[Config consistency_log_b]
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config consistency_log_b_double]
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 7
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
 
 [Config continuity_log]
 repeat = 25
@@ -166,7 +190,7 @@ CRAN2.cellularSystem.compression_rate = 20
 [Config monotonicity_test_log]
 repeat = 25
 CRAN2.N_cells = ${2 , 10 , 35 , 50}
-CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.cellularSystem.dr = 20kbps
 CRAN2.as.sizeMean = 6.9
 CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
