--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -102,7 +102,7 @@ CRAN2.as.timeMean = 0.5
 
 
 # Consistency Test #
-[Config consistency_log]
+[Config consistency_log] # EMA #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -111,7 +111,7 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config consistency_log_double]
+[Config consistency_log_double] # EMA #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -123,7 +123,7 @@ CRAN2.cellularSystem.compression_on = true
 #CRAN2.cellularSystem.compression_rate = 0
 
 # Consistency Test #
-[Config consistency_log_b]
+[Config consistency_log_b] # IO #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -134,19 +134,19 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config consistency_log_b_double]
+[Config consistency_log_b_double] # IO #
 repeat = 25
 CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.cellularSystem.dr = ${40}kbps
 CRAN2.as.sizeMean = 7
-CRAN2.as.timeMean = 0.5
+CRAN2.as.timeMean = 0.25
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 
-[Config continuity_log]
+[Config continuity_log]	# EMA #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -155,7 +155,7 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config continuity_log_7]
+[Config continuity_log_7] # EMA #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -164,7 +164,7 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config continuity_b_log]
+[Config continuity_b_log] # IO #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -175,7 +175,7 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config continuity_b_log_7]
+[Config continuity_b_log_7] # IO #
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -187,7 +187,7 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 
-[Config monotonicity_test_log]
+[Config monotonicity_test_log] # IO #
 repeat = 25
 CRAN2.N_cells = ${2 , 10 , 35 , 50}
 CRAN2.cellularSystem.dr = 20kbps
