added verification configs and statistic on rrh

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -1,7 +1,7 @@
 [General]
 network = CRAN2
 sim-time-limit = 120000s
-repeat = 20
+repeat = 25
 
 # RNGs
 num-rngs = 3
@@ -13,23 +13,37 @@ seed-set = ${repetition}
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
 
-[Config degeneracy_A_exp]
+# degeneracy verification
+[Config degeneracy_A_size_exp]
 CRAN2.as.sizeMean = 0
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
 
-[Config consistency_A_exp]
+# consistency verification
+[Config consistency_A_exp_0]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.cellularSystem.dr = 20kbps
 
-[Config consistency_B_exp]
-extends = consistency_A_exp
+[Config consistency_B_exp_0]
+extends = consistency_A_exp_0
 CRAN2.cellularSystem.compression_on = true
-# CRAN2.cellularSystem.compression_rate = 0	# defaul value
+CRAN2.cellularSystem.compression_rate = 20	# defaul value
 
+[Config consistency_A_exp_1]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.25
+CRAN2.cellularSystem.dr = 40kbps
+CRAN2.cellularSystem.rrh[*].alfa = 0.5
+
+[Config consistency_B_exp_1]
+extends = consistency_A_exp_1
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20	# defaul value
+
+# continuity verification
 [Config continuity_A_exp]
-CRAN2.as.sizeMean = ${1024, 1034}
+CRAN2.as.sizeMean = ${900}	
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
 
@@ -38,13 +52,25 @@ extends = continuity_A_exp
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config monotonicity_A_exp_cells]
+# monotonicity verification
+[Config monotonicity_B_exp_cells]
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.N_cells = ${2, 10, 35, 50}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
+
+[Config monotonicity_A_exp_dr]
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20, 23, 30}kbps
+
+[Config monotonicity_B_exp_dr]
+extends = monotonicity_A_exp_dr
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
 
 [Config speed_test]
 repeat = 10
