--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -102,7 +102,7 @@ CRAN2.as.timeMean = 0.5
 
 
 # Consistency Test #
-[Config consistency_log]
+[Config consistency_log]	#IO
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -111,16 +111,14 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config consistency_log_double]
+[Config consistency_log_double]	#IO
 repeat = 25
 CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.cellularSystem.dr = ${40}kbps
 CRAN2.as.sizeMean = 7
-CRAN2.as.timeMean = 0.5
+CRAN2.as.timeMean = 0.25
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
-CRAN2.cellularSystem.compression_on = true
-#CRAN2.cellularSystem.compression_rate = 0
 
 # Consistency Test #
 [Config consistency_log_b]
@@ -146,7 +144,16 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 
-[Config continuity_log]
+[Config continuity_log_68]
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.as.sizeMean = 6.8
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+
+[Config continuity_log_69]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -155,11 +162,11 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config continuity_log_7]
+[Config continuity_log_67]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
-CRAN2.as.sizeMean = 7
+CRAN2.as.sizeMean = 6.7
 CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
@@ -198,3 +205,11 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
+[Config monotonicity_test_log_A]	#IO
+repeat = 25
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 20kbps
+CRAN2.as.sizeMean = 6.9
+CRAN2.as.timeMean = ${0.5, 0.7, 1, 1.5}
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
