added scripts + debug&minor changes

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -23,7 +23,7 @@ CRAN2.cellularSystem.dr = 20kbps
 [Config consistency_A_exp_0]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.dr = 20kbps
+CRAN2.cellularSystem.dr = 40kbps
 
 [Config consistency_B_exp_0]
 extends = consistency_A_exp_0
@@ -33,7 +33,7 @@ CRAN2.cellularSystem.compression_rate = 20	# defaul value
 [Config consistency_A_exp_1]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.25
-CRAN2.cellularSystem.dr = 40kbps
+CRAN2.cellularSystem.dr = 80kbps
 CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
 [Config consistency_B_exp_1]
@@ -43,9 +43,9 @@ CRAN2.cellularSystem.compression_rate = 20	# defaul value
 
 # continuity verification
 [Config continuity_A_exp]
-CRAN2.as.sizeMean = ${900}	
+CRAN2.as.sizeMean = ${1024}
 CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.dr = 20kbps
+CRAN2.cellularSystem.dr = ${20, 22, 40, 42, 44}kbps
 
 [Config continuity_B_exp]
 extends = continuity_A_exp
