modified configurations + added script

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -11,7 +11,7 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-2 = 2
 
 # AS Parameters Inizialization values
-CRAN2.N_cells = 5
+CRAN2.N_cells = 10
 
 # degeneracy verification
 [Config degeneracy_A_size_exp]
@@ -34,16 +34,16 @@ CRAN2.cellularSystem.compression_rate = 20	# defaul value
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.25
 CRAN2.cellularSystem.dr = 80kbps
-CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
 [Config consistency_B_exp_1]
 extends = consistency_A_exp_1
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20	# defaul value
+CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
 # continuity verification
 [Config continuity_A_exp]
-CRAN2.as.sizeMean = ${1024}
+CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = ${20, 22, 40, 42, 44}kbps
 
@@ -56,7 +56,7 @@ CRAN2.cellularSystem.compression_rate = 20
 [Config monotonicity_B_exp_cells]
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
-CRAN2.N_cells = ${4, 6, 8}
+CRAN2.N_cells = ${2, 3, 10, 16, 20}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
@@ -78,5 +78,8 @@ CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 64kbps
 
-
-
+[Config calibration]
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.2
+CRAN2.cellularSystem.dr = ${82}kbps
+CRAN2.N_cells = 15
