--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -102,7 +102,7 @@ CRAN2.as.timeMean = 0.5
 
 
 # Consistency Test #
-[Config consistency_log]	#IO
+[Config consistency_log]	#EMA
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -115,8 +115,8 @@ CRAN2.as.sizeVariance = 0.3
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${40}kbps
-CRAN2.as.sizeMean = 7.6246
-CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeMean = 6.9315
+CRAN2.as.timeMean = 0.25
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
@@ -142,6 +142,7 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
+CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
 
 [Config continuity_log_68]
@@ -196,7 +197,18 @@ CRAN2.cellularSystem.compression_rate = 20
 
 [Config monotonicity_test_log] # IO #
 repeat = 25
-CRAN2.N_cells = ${2 , 10 , 35 , 50}
+CRAN2.N_cells = ${5 , 10 , 35 , 50}
+CRAN2.cellularSystem.dr = 20kbps
+CRAN2.as.sizeMean = 6.9
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config monotonicity_spec] # IO #
+repeat = 25
+CRAN2.N_cells = ${5}
 CRAN2.cellularSystem.dr = 20kbps
 CRAN2.as.sizeMean = 6.9
 CRAN2.as.timeMean = 0.5
@@ -213,3 +225,6 @@ CRAN2.as.sizeMean = 6.9
 CRAN2.as.timeMean = ${0.5, 0.7, 1, 1.5}
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
+
+[Config ciao]
+repeat =23
