--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -57,7 +57,7 @@ CRAN2.cellularSystem.compression_rate = 20
 [Config monotonicity_B_exp_cells]
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
-CRAN2.N_cells = ${7}
+CRAN2.N_cells = ${2, 3, 7, 10, 16, 20}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
