--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -80,6 +80,6 @@ CRAN2.cellularSystem.dr = 64kbps
 
 [Config calibration]
 CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.2
-CRAN2.cellularSystem.dr = ${82}kbps
+CRAN2.as.timeMean = 0.001
+CRAN2.cellularSystem.dr = ${8}Mbps
 CRAN2.N_cells = 15
