--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -225,3 +225,23 @@ CRAN2.as.sizeMean = 6.9
 CRAN2.as.timeMean = ${0.5, 0.7, 1, 1.5}
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
+
+[Config exp]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 20kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config log]
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 20kbps
+CRAN2.as.sizeMean = 6.93
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
