added more statistics on bbu and rrh

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -54,13 +54,16 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 # monotonicity verification
-[Config monotonicity_B_exp_cells]
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 20
-CRAN2.N_cells = ${2, 3, 7, 10, 16, 20}
+[Config monotonicity_A_exp_cells]
+CRAN2.N_cells = ${3, 7, 10, 16, 20}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
+
+[Config monotonicity_B_exp_cells]
+extends = monotonicity_A_exp_cells
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
 
 [Config monotonicity_A_exp_dr]
 CRAN2.N_cells = 10
@@ -98,3 +101,25 @@ CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${82}Mbps
 CRAN2.N_cells = 15
+
+[Config lognorm-theo_A]
+repeat = 20
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 20kbps
+CRAN2.as.sizeMean = ${6.93}
+CRAN2.as.timeMean = 0.5
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3
+
+[Config lognorm-theo_B]
+extends = lognorm-theo_A
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+
+
+
+
+
+
+
