--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ CRAN2/simulations/results/
 CRAN2/.settings/
 CRAN2/src/PktMessage_m.*
 CRAN2/.computed/
+CRAN2/.metadata/
+CRAN2/src/.qtenvrc
 CRAN2/.cmdenv-log
 .cmdenv-log
 /.metadata/
