--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -102,7 +102,7 @@ CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${82}Mbps
 CRAN2.N_cells = 15
 
-[Config lognorm-theo_A]
+[Config lognorm-theo_A_new]
 repeat = 20
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 20kbps
@@ -111,15 +111,32 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config lognorm-theo_B]
-extends = lognorm-theo_A
+[Config lognorm-theo_B_new]
+extends = lognorm-theo_A_new
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
+[Config exp-theo_A]
+repeat = 20
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20}kbps
+
+[Config exp-theo_B]
+extends = exp-theo_A
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 
-
-
-
+[Config exp-test]
+repeat = 20
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = ${20}kbps
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
 
 
 
