--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -26,7 +26,6 @@ seed-set = ${repetition}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = ${16.6}kbps
-CRAN2.cellularSystem.compression_on = false
 CRAN2.N_cells=1
 
 ## Without compression multi-cell ##
@@ -34,7 +33,6 @@ CRAN2.N_cells=1
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = ${16.6}kbps
-CRAN2.cellularSystem.compression_on = false
 CRAN2.N_cells=30
 
 ## Compression equal to 0% ##
@@ -43,7 +41,6 @@ CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 16.6kbps
 CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 0
 CRAN2.N_cells = 1
 
 ## Exponential with compression equal to 99% ##
@@ -226,57 +223,33 @@ CRAN2.as.timeMean = ${0.5, 0.7, 1, 1.5}
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-<<<<<<< Updated upstream
-[Config exp]
-repeat = 10
-=======
-[Config ValidationAgainstTheoreticalModel_A]
-repeat = 25
-CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = 20kbps
-CRAN2.as.sizeMean = 1024
-CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.compression_on = false
-
-[Config ValidationAgainstTheoreticalModel_B]
-repeat = 25
->>>>>>> Stashed changes
-CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = 20kbps
-CRAN2.as.sizeMean = 1024
-CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 20
-
-<<<<<<< Updated upstream
-[Config log]
-repeat = 10
-=======
 [Config ValidationAgainstTheoreticalModel_A_Log]
-repeat = 25
->>>>>>> Stashed changes
+repeat = 10
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 20kbps
 CRAN2.as.sizeMean = 6.93
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.as.timeMean = 0.5
-<<<<<<< Updated upstream
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 20
-=======
-CRAN2.cellularSystem.compression_on = false
 
 [Config ValidationAgainstTheoreticalModel_B_Log]
-repeat = 25
+repeat = 10
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 20kbps
 CRAN2.as.sizeMean = 6.93
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.as.timeMean = 0.5
-CRAN2.as.timeDistribution = 1
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
->>>>>>> Stashed changes
+[Config CompressionCalibr]
+sim-time-limit = 10800s	# three Hours
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 1 Mbps
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.015	# It cannot be smaller! #
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
+CRAN2.cellularSystem.rrh[*].alfa = 0.001
