--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -249,7 +249,7 @@ repeat = 5
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 1 Mbps
 CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.015	# It cannot be smaller! #
+CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
-CRAN2.cellularSystem.rrh[*].alfa = 0.001
+CRAN2.cellularSystem.rrh[*].alfa = 0.02 									# It cannot be smaller than 0.01! #
