--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -20,24 +20,39 @@ CRAN2.as.sizeMean = 0
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 20kbps
 
+[Config degeneracy_dr_0]
+CRAN2.cellularSystem.dr = 0kbps
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+
+[Config degeneracy_low_speed_A]
+CRAN2.as.sizeMean = 1024
+CRAN2.as.timeMean = 0.5
+CRAN2.cellularSystem.dr = 0.1kbps
+
+[Config degeneracy_low_speed_B]
+extends = degeneracy_low_speed_A
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = 20
+
 # consistency verification
-[Config consistency_A_exp_0]
+[Config consistency_A_exp_40]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.dr = 40kbps
 
-[Config consistency_B_exp_0]
-extends = consistency_A_exp_0
+[Config consistency_B_exp_40]
+extends = consistency_A_exp_40
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20	# defaul value
 
-[Config consistency_A_exp_1]
+[Config consistency_A_exp_80]
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.25
 CRAN2.cellularSystem.dr = 80kbps
 
-[Config consistency_B_exp_1]
-extends = consistency_A_exp_1
+[Config consistency_B_exp_80]
+extends = consistency_A_exp_80
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20	# defaul value
 CRAN2.cellularSystem.rrh[*].alfa = 0.5
@@ -55,6 +70,8 @@ CRAN2.cellularSystem.compression_rate = 20
 
 # monotonicity verification
 [Config monotonicity_A_exp_cells]
+sim-time-limit = 80000s
+repeat = 10
 CRAN2.N_cells = ${3, 7, 10, 16, 20}
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
@@ -90,11 +107,13 @@ CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.001
 CRAN2.cellularSystem.dr = 15Mbps
 
-[Config calibration]
+[Config calibration_speed]
+sim-time-limit = 10800s
+repeat = 10
 CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${82}Mbps
-CRAN2.N_cells = 15
+CRAN2.cellularSystem.dr = ${1..10 step 2}Mbps
+CRAN2.N_cells = 10
 
 [Config calibration2]
 CRAN2.as.sizeMean = 1400
