--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -2,7 +2,7 @@
 network = CRAN2
 sim-time-limit = 120000s
 repeat = 6
-
+simtime-resolution = ms
 # AS Parameters Inizialization values
 CRAN2.N_cells = 5
 
@@ -247,9 +247,9 @@ CRAN2.cellularSystem.compression_rate = 20
 sim-time-limit = 10800s	# three Hours
 repeat = 5
 CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = 1 Mbps
+CRAN2.cellularSystem.dr = 2 Mbps
 CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
+CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
-CRAN2.cellularSystem.rrh[*].alfa = 0.02 									# It cannot be smaller than 0.01! #
+CRAN2.cellularSystem.rrh[*].alfa = 0.01 									# It cannot be smaller than 0.01! #
