update gitignore + added config

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -147,6 +147,15 @@ extends = exp-theo_A
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-
+[Config CompressionCalibr]
+sim-time-limit = 7200s	# three Hours
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 1.7 Mbps
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
+CRAN2.cellularSystem.rrh[*].alfa = 0.01	
 
 
