--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ CRAN2/src/.qtenvrc
 CRAN2/.cmdenv-log
 .cmdenv-log
 /.metadata/
-.project
+CRAN/.project
 CRAN2/.cproject
 **/results
 CRAN2/.qtenvrc
