delete statistic + config test

--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -94,18 +94,18 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
 [Config speed_test_1Gbps_00002]
-sim-time-limit = 3600s
+sim-time-limit = 60s
 repeat = 5
 CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.00002
 CRAN2.cellularSystem.dr = 1Gbps
 
-[Config speed_test_15Mbps]
-sim-time-limit = 3600s
+[Config speed_test_Mbps]
+sim-time-limit = 120s
 repeat = 5
 CRAN2.as.sizeMean = 1400
-CRAN2.as.timeMean = 0.001
-CRAN2.cellularSystem.dr = 15Mbps
+CRAN2.as.timeMean = 0.0001
+CRAN2.cellularSystem.dr = ${150}Mbps
 
 [Config calibration_speed]
 sim-time-limit = 10800s
@@ -147,7 +147,7 @@ extends = exp-theo_A
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config CompressionCalibr]
+[Config CompressionCalibr8]
 sim-time-limit = 7200s	# three Hours
 repeat = 5
 CRAN2.N_cells = 10
@@ -156,6 +156,16 @@ CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
-CRAN2.cellularSystem.rrh[*].alfa = 0.01	
+CRAN2.cellularSystem.rrh[*].alfa = 0.008	
 
+[Config calibration_alpha]
+sim-time-limit = 7200s	# three Hours
+repeat = 5
+CRAN2.N_cells = 10
+CRAN2.cellularSystem.dr = 7Mbps
+CRAN2.as.sizeMean = 1400
+CRAN2.as.timeMean = 0.01	# It cannot be smaller than 0.01! #
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
+CRAN2.cellularSystem.rrh[*].alfa = 0.001	
 
