--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -162,11 +162,20 @@ CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
 CRAN2.cellularSystem.rrh[*].alfa = 0.001	
 
 [Config calibration_speed]
-sim-time-limit = 10800s
-repeat = 10
+sim-time-limit = 1800s
+repeat = 5
+CRAN2.N_cells = 10
 CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${1..10 step 2}Mbps
+CRAN2.cellularSystem.dr = ${1.3..2 step 0.1}Mbps
+
+[Config calibration_size]
+sim-time-limit = 1800s	# 30 min
+repeat = 5
 CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${600..1801 step 100}
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.7Mbps
+
 
 
