--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -255,12 +255,22 @@ CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
 CRAN2.cellularSystem.rrh[*].alfa = 0.01 									# It cannot be smaller than 0.01! #
 
 [Config Experiment_SizeChanging_LOG]
-sim-time-limit = 3600s													# one Hour
-repeat = 5
+sim-time-limit = 1800s													# one Hour
+repeat = 10
 CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
 CRAN2.cellularSystem.dr = 1.7Mbps										# Checking the behaviour of the system with FIXED service time (FIXED to 1.7 Mbits)
 #7.908 (1000Bytes), ... , 7.245 (1400Bytes) , ... , 7.496 (1800Bytes)	6.907, 7.003, 7.09, 7.170, 7.245, 7.313 , 7.378, 7.438, 7.496
 CRAN2.as.sizeMean = ${6.397,6.55, 6.684, 6.80,6.907, 7.003, 7.09, 7.170, 7.245, 7.313 , 7.378, 7.438, 7.496}													
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
+CRAN2.as.timeMean = 0.01												# 10 ms
+
+[Config Experiment_DRChanging_LOG]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
+CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
+CRAN2.cellularSystem.dr = ${1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,2}Mbps		
+CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}												
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
