--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -167,7 +167,8 @@ repeat = 5
 CRAN2.N_cells = 10
 CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.dr = ${1.3..2 step 0.1}Mbps
+# CRAN2.cellularSystem.dr = ${1.3..2 step 0.1}Mbps
+CRAN2.cellularSystem.dr = ${1.19..1.25 step 0.01}Mbps
 
 [Config calibration_size]
 sim-time-limit = 1800s	# 30 min
@@ -177,5 +178,13 @@ CRAN2.as.sizeMean = ${600..1801 step 100}
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = 1.7Mbps
 
+[Config calibration_dr_size]
+sim-time-limit = 1800s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeMean = ${1000..1501 step 100}
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
 
+[Config calibration_B_]
 
