--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -19,7 +19,10 @@ seed-set = ${repetition}
 *.CRAN2.as.rng-1 = 1
 *.CRAN2.as.rng-2 = 2
 
+
+#####################################
 ####  ## Debug Configurations ## ####
+#####################################
 
 ## Without compression one cell ##
 [Config no-compr-debug-oneCell]
@@ -52,27 +55,11 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.N_cells = 1
 
-#### #Validation configs# ####
+##############################
+## 	  Validation configs 	##
+##############################
 
-# Case A #
-[Config case-a-validation]
-repeat = 20
-*.N_cells = 20
-*.cellularSystem.dr = ${20}kbps
-*.as.sizeMean = 1024
-*.as.timeMean = 0.5
-
-# Case B #
-[Config case-b-validation-30]
-repeat = 20
-CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = ${20}kbps
-CRAN2.as.sizeMean = 1024
-CRAN2.as.timeMean = 0.5
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = 30
-
-# Degeneracy Test #1 No RRH connected #
+## DEGENERACY ##
 [Config degeneracy_1]
 repeat = 10
 CRAN2.N_cells = 0
@@ -80,8 +67,6 @@ CRAN2.cellularSystem.dr = ${20}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
-# Degeneracy Test #2 Infinite datarate #
-#  Zero is treated specially and results in zero transmission duration, i.e. it stands for infinite bandwidth #
 [Config degeneracy_2]
 repeat = 10
 CRAN2.N_cells = 10
@@ -89,7 +74,6 @@ CRAN2.cellularSystem.dr = ${0}kbps
 CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
-# Degeneracy Test #2 Low datarate #
 [Config degeneracy_3]
 repeat = 10
 CRAN2.N_cells = 10
@@ -98,8 +82,8 @@ CRAN2.as.sizeMean = 1024
 CRAN2.as.timeMean = 0.5
 
 
-# Consistency Test #
-[Config consistency_log]	#EMA
+## CONSISTENCY ##
+[Config consistency_log]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -108,7 +92,7 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config consistency_log_double] # EMA #
+[Config consistency_log_double]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${40}kbps
@@ -117,8 +101,7 @@ CRAN2.as.timeMean = 0.25
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-# Consistency Test #
-[Config consistency_log_b] # IO #
+[Config consistency_log_b]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -129,7 +112,7 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config consistency_log_b_double] # IO #
+[Config consistency_log_b_double] 
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${40}kbps
@@ -141,7 +124,7 @@ CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 CRAN2.cellularSystem.rrh[*].alfa = 0.5
 
-
+## CONTINUITIY ##
 [Config continuity_log_68]
 repeat = 25
 CRAN2.N_cells = 10
@@ -169,7 +152,7 @@ CRAN2.as.timeMean = 0.5
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
-[Config continuity_b_log] # IO #
+[Config continuity_b_log]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -180,7 +163,7 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config continuity_b_log_7] # IO #
+[Config continuity_b_log_7]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = ${20}kbps
@@ -191,8 +174,8 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-
-[Config monotonicity_test_log] # IO #
+## MONOTONICITY ##
+[Config monotonicity_test_log]
 repeat = 25
 CRAN2.N_cells = ${5 , 10 , 35 , 50}
 CRAN2.cellularSystem.dr = 20kbps
@@ -203,7 +186,7 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config monotonicity_spec] # IO #
+[Config monotonicity_spec]
 repeat = 25
 CRAN2.N_cells = ${5}
 CRAN2.cellularSystem.dr = 20kbps
@@ -214,7 +197,7 @@ CRAN2.as.sizeVariance = 0.3
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config monotonicity_test_log_A]	#IO
+[Config monotonicity_test_log_A]
 repeat = 25
 CRAN2.N_cells = 10
 CRAN2.cellularSystem.dr = 20kbps
@@ -223,6 +206,13 @@ CRAN2.as.timeMean = ${0.5, 0.7, 1, 1.5}
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 
+##############################################
+## Validation against the theoretical model ##
+##############################################
+
+## CASE LOGNORMAL DISTRIB. OF PKT SIZE
+
+# CASE A
 [Config ValidationAgainstTheoreticalModel_A_Log]
 repeat = 10
 CRAN2.N_cells = 10
@@ -232,6 +222,7 @@ CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3
 CRAN2.as.timeMean = 0.5
 
+# CASE B
 [Config ValidationAgainstTheoreticalModel_B_Log]
 repeat = 10
 CRAN2.N_cells = 10
@@ -243,34 +234,58 @@ CRAN2.as.timeMean = 0.5
 CRAN2.cellularSystem.compression_on = true
 CRAN2.cellularSystem.compression_rate = 20
 
-[Config CompressionCalibr]
-sim-time-limit = 10800s	# three Hours
-repeat = 5
+##########################
+## 		WARMUP Check 	##
+##########################
+
+## Lognormal size distribution case ##
+[Config warmup-extr-caseA_log]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
 CRAN2.N_cells = 10
-CRAN2.cellularSystem.dr = 2 Mbps
-CRAN2.as.sizeMean = 1400
 CRAN2.as.timeMean = 0.01
-CRAN2.cellularSystem.compression_on = true
-CRAN2.cellularSystem.compression_rate = ${5,10,15,20,25,30,35,40}
-CRAN2.cellularSystem.rrh[*].alfa = 0.01 									# It cannot be smaller than 0.01! #
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.cellularSystem.dr = 1.4Mbps
+CRAN2.as.sizeMean = 7.313
+
+## Exponential size distribution case ##
+[Config warmup-extr-caseA_exp]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.timeMean = 0.01
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.cellularSystem.dr = 1.4Mbps
+CRAN2.as.sizeMean = 1500		
+
+############################################
+## 				EXPERIMENTS				  ##
+############################################
+
+## CASE A ##
+[Config Experiment_DR_SizeChanging_LOG]
+sim-time-limit = 1800s													# one Hour
+warmup-period = 400s
+repeat = 10
+CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
+CRAN2.cellularSystem.dr = ${1.4,1.45,1.5,1.55,1.6,1.7,1.8,1.9,2,2.1}Mbps		
+CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}												
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
+CRAN2.as.timeMean = 0.01												# 10 ms
+
+#############################################
+## OTHERS CONFIG (TO BE DELETED)	#########
+#############################################
 
 [Config Experiment_SizeChanging_LOG]
 sim-time-limit = 1800s													# one Hour
 repeat = 10
 CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
 CRAN2.cellularSystem.dr = 1.7Mbps										# Checking the behaviour of the system with FIXED service time (FIXED to 1.7 Mbits)
-#7.908 (1000Bytes), ... , 7.245 (1400Bytes) , ... , 7.496 (1800Bytes)	6.907, 7.003, 7.09, 7.170, 7.245, 7.313 , 7.378, 7.438, 7.496
+#7.908 (1000Bytes), ... , 7.245 (1400Bytes) , ... , 7.496 (1800Bytes)
 CRAN2.as.sizeMean = ${6.397,6.55, 6.684, 6.80,6.907, 7.003, 7.09, 7.170, 7.245, 7.313 , 7.378, 7.438, 7.496}													
-CRAN2.as.sizeDistribution = 0
-CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
-CRAN2.as.timeMean = 0.01												# 10 ms
-
-[Config Experiment_DRChanging_LOG]
-sim-time-limit = 1800s													# one Hour
-repeat = 10
-CRAN2.N_cells = 10														# Not relevant for case A (FIXED TO 10)
-CRAN2.cellularSystem.dr = ${1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,2}Mbps		
-CRAN2.as.sizeMean = ${7,7.09,7.170,7.245,7.313}												
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
