--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -255,9 +255,9 @@ sim-time-limit = 1800s													# one Hour
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.timeMean = 0.01
-CRAN2.as.sizeVariance = 0.3	
 CRAN2.cellularSystem.dr = 1.4Mbps
 CRAN2.as.sizeMean = 1500		
+CRAN2.as.sizeDistribution = 1
 
 ############################################
 ## 				EXPERIMENTS				  ##
@@ -278,6 +278,8 @@ CRAN2.as.timeMean = 0.01												# 10 ms
 #############################################
 ## OTHERS CONFIG (TO BE DELETED)	#########
 #############################################
+
+
 
 [Config Experiment_SizeChanging_LOG]
 sim-time-limit = 1800s													# one Hour
