--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -186,5 +186,11 @@ CRAN2.as.sizeMean = ${1000..1501 step 100}
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
 
-[Config calibration_B_]
-
+[Config warmup-extr-caseA_exp]
+sim-time-limit = 1800s													# one Hour
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.timeMean = 0.01
+CRAN2.as.sizeVariance = 0.3	
+CRAN2.cellularSystem.dr = 1.4Mbps
+CRAN2.as.sizeMean = 1500
