--- a/CRAN2/simulations/omnetppConfig.ini
+++ b/CRAN2/simulations/omnetppConfig.ini
@@ -178,7 +178,7 @@ CRAN2.as.sizeMean = ${600..1801 step 100}
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = 1.7Mbps
 
-[Config calibration_dr_size]
+[Config calibration_dr_size_exp]
 sim-time-limit = 1800s
 repeat = 10
 CRAN2.N_cells = 10
@@ -186,8 +186,26 @@ CRAN2.as.sizeMean = ${1000..1501 step 100}
 CRAN2.as.timeMean = 0.01
 CRAN2.cellularSystem.dr = ${1.2..2 step 0.1}Mbps
 
+[Config calibration_log]
+sim-time-limit = 1800s
+repeat = 10
+CRAN2.N_cells = 10
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.sizeMean = ${7.09, 7.245, 7.313}		# 6.397, 6.55, 6.684, 6.80, 6.907, 7.003, 7.170,
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.dr = 1.7Mbps 		# ${1.3..2 step 0.1}Mbps
+
+[Config calibration_log_B]
+extends = calibration_log
+CRAN2.cellularSystem.compression_on = true
+CRAN2.cellularSystem.compression_rate = ${25,30,35,40,45}		# 5,10,15,20,
+CRAN2.cellularSystem.rrh[*].alfa = 0.01			# ${0.01, 0.005, 0.001}	
+
+# calibration case B, lognormal: variare #cells, costante alfa, %compressione, dr, packet size/variance, inter-arrival
+
+
 [Config warmup-extr-caseA_exp]
-sim-time-limit = 1800s													# one Hour
+sim-time-limit = 1800s													# 30 min
 repeat = 10
 CRAN2.N_cells = 10
 CRAN2.as.timeMean = 0.01
