--- a/CRAN2/simulations/omnetpp.ini
+++ b/CRAN2/simulations/omnetpp.ini
@@ -289,3 +289,21 @@ CRAN2.as.sizeMean = ${6.397,6.55, 6.684, 6.80,6.907, 7.003, 7.09, 7.170, 7.245, 
 CRAN2.as.sizeDistribution = 0
 CRAN2.as.sizeVariance = 0.3												# To be changed in next experiments
 CRAN2.as.timeMean = 0.01												# 10 ms
+
+##############################################
+############		2kr			##############
+##############################################
+
+[Config tkr]
+sim-time-limit = 1800s
+warmup-period = 350s
+repeat = 5
+CRAN2.as.sizeMean = 7.245												
+CRAN2.as.sizeDistribution = 0
+CRAN2.as.timeMean = 0.01
+CRAN2.cellularSystem.compression_on = true
+CRAN2.as.sizeVariance = ${0.1, 0.5}											
+CRAN2.cellularSystem.compression_rate = ${30, 60}
+CRAN2.cellularSystem.dr = ${1.3, 3.7}Mbps
+CRAN2.N_cells = ${3, 18}	
+CRAN2.cellularSystem.rrh[*].alfa = ${0.01, 0.1}
